Fix header alignment

--- a/www/src/css/main.css
+++ b/www/src/css/main.css
@@ -23,7 +23,7 @@ body {
 }
 
 .sidebar-header {
-    padding: 0.75rem;
+    padding: 0.5rem;
 }
 
 .sidebar-container {
@@ -90,7 +90,6 @@ body {
 
 .chat-header {
     padding: 1rem;
-    border-bottom-width: 1px;
 }
 
 .chat-area {
